# ICPX

./: .dockerignore  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  LICENSE  Makefile  SECURITY.md  docker-compose.yml  package.json  security.txt
.github/workflows/: ci.yml  formal-verification.yml  security-guard.yml
deploy/: devnet.json  mainnet.json
docs/: ICPX.md  doc1.md  how-to.md  immutability-revenue.md  security.md  verification.md
idl/: icpx_payments.json
programs/icpx-payments/: Cargo.toml
programs/icpx-payments/src/: accounts.rs  constants.rs  errors.rs  events.rs  lib.rs  processor.rs
programs/icpx-payments/src/instructions/: accept_job.rs  cancel_expired_job.rs  complete_job.rs  create_gpu_job.rs  fund_job.rs  mod.rs  open_dispute.rs  settle_stream.rs  settlement.rs
programs/icpx-payments/src/math/: payment.rs
programs/icpx-payments/src/state/: job.rs  mod.rs  payment.rs
programs/icpx-payments/tests/: payment_math.rs
scripts/: check-deploy-metadata.js  check-program-id.sh  check-repo-safety.sh  deploy-devnet.sh  deploy-mainnet.sh  publish-idl.sh  publish-mainnet-idl.sh  set-devnet-upgrade-authority.sh  upgrade-mainnet.sh  verifiable-build.sh  verify-mainnet-build.sh
tests/: payment_flow.test.ts
