[workspace]
members = ["programs/icpx-payments"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/icpx/icpx"

[workspace.lints.clippy]
checked_conversions = "deny"
panic = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
unexpected_cfgs = "allow"
