[workspace]
members = ["programs/icpx-payments"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/icpx/icpx"

[workspace.lints.clippy]
checked_conversions = { level = "deny" }
panic = { level = "deny" }
unwrap_used = { level = "deny" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
