[package]
name = "icpx-payments"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
custom-heap = []
custom-panic = []
no-entrypoint = []

[dependencies]
blake3 = "=1.8.2"
borsh = { version = "1.6.1", features = ["derive"] }
indexmap = "=2.11.1"
proc-macro-crate = "=3.3.0"
solana-program = "2.3.0"
toml_edit = "=0.22.27"
zeroize_derive = "=1.4.3"

[lints]
workspace = true
