[package]
name = "icpx-payments"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "icpx_payments"
crate-type = ["cdylib", "lib"]

[features]
default = []
anchor-debug = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
idl-build = ["anchor-lang/idl-build"]
no-idl = []
no-entrypoint = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.32.1"
blake3 = "=1.8.2"
borsh = "0.10.4"
indexmap = "=2.11.1"
proc-macro-crate = "=3.3.0"
solana-program = "2.3.0"
solana-security-txt = "1.1.1"
toml_edit = "=0.22.27"
zeroize_derive = "=1.4.3"

[lints.clippy]
checked_conversions = "deny"
panic = "deny"
unwrap_used = "deny"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(kani)',
  'cfg(target_os, values("solana"))',
] }
